server/public/assets/css/style.css
/* ... */
#find_div{
    position: absolute;
    background: #282828;
    z-index: 2;
    width: 100%;
    padding: 0 15px;
    top: 0;
    color: white;
}

#find_form {
    display: flex;
    flex-direction: row;
    align-content: center;
    justify-content: center;
}

.num_of_found {
    display: flex;
    align-self: center;
    color: white;
    padding-left: 8px;
}

#close_find_form_button {
    display: flex;
    align-self: center;
    padding-left: 10px;
    color: white;
}

.highlight{
    background: rgba(255, 255, 255, 0.2) !important;
}

.mega h5{
    color: rgb(255, 255, 255);   cursor: default;   display: inline;
    font-size: 50px;
    font-weight: 100;
    height: auto;
    line-height: 90.069229px;   text-align: center;
    text-shadow: rgba(18, 18, 18, 0.76) 0px 1px 4px;   width: auto;
    margin-left: auto;
    margin-right: auto;
    display: flex;
    justify-content: center;
}

.mega form{
    display: flex;
    justify-content: center;
    /*-webkit-background-clip: border-box;   -webkit-background-origin: padding-box;   -webkit-background-size: auto;   -webkit-box-shadow: rgb(68, 68, 68) 0px 0px 8px 0px;   background-attachment: scroll;   background-clip: border-box;   background-color: rgb(255, 255, 255);   background-image: none;   background-origin: padding-box;   background-size: auto;   border-bottom-left-radius: 3px;   border-bottom-right-radius: 3px;   border-top-left-radius: 3px;   border-top-right-radius: 3px;   box-shadow: rgb(68, 68, 68) 0px 0px 8px 0px;   box-sizing: border-box;   color: rgb(255, 255, 255);   cursor: text;   display: flex;   font-family: 'Helvetica Neue', Helvetica, Arial, 'Lucida Grande', sans-serif;   font-size: 17px;   font-weight: normal;   height: 50px;   line-height: 24.2857151031494px;   margin-top: 0px;   padding-bottom: 5px;   padding-left: 20px;   padding-right: 5px;   padding-top: 5px;   text-align: center;   width: 507.8125px;
    margin-left: auto;
    margin-right: auto;
    margin-top: 1%;
    margin-bottom: 2%;*/
    width: 47%;
    margin-right: auto;
    margin-left: auto;
    text-align: center;
}

.mega .prething{
    box-sizing: border-box;
    /*color: rgb(155, 155, 155);*/
    cursor: text;   display: block;
    text-shadow: rgba(18, 18, 18, 0.76) 0px 1px 4px;
    color: rgb(255, 255, 255);
    /*font-family: 'Helvetica Neue', Helvetica, Arial, 'Lucida Grande', sans-serif;   */
    font-size: 17px;
    /*font-weight: 200; */
    height: 24px;
    line-height: 26px;
    margin-bottom: 8px;
    margin-left: 29px;
    margin-right: 8.5px;
    margin-top: 8px;
    min-width: 56px;
    text-align: center;
    width: 40px;
    margin-right: -85px;
}

.mega input{
    /*color: rgb(0, 0, 0);*/
    /*font-family: 'Helvetica Neue', Helvetica, Arial, 'Lucida Grande', sans-serif;*/
    font-size: 17px !important;
    height: 42px;
    line-height: 24px;
    min-width: 307px;
    /*width: 400px;*/
    word-spacing: 0px;
    box-shadow: none !important;
    border:none !important;
    color: rgb(255, 255, 255);
    text-shadow: rgba(18, 18, 18, 0.76) 0px 1px 4px;
    border-bottom: 1px solid white !important;
    padding-left: 69px !important;
}


.label-for-mobile-frontpage {
    display: none;
}

.listen-button {
    background: #2d2d2d !important;
    display: flex;
    justify-content: center;
    min-width: 100px;
}

.cursor-pointer{
    cursor:pointer;
}

.cursor-default{
    cursor:default;
}

.contact-button-submit:hover{
    background-color:#2d2d2d;
    color:white;
    border-left:1px solid #2D2D2D;
    border-right:1px solid #2D2D2D;
    border-top:1px solid #2D2D2D;
    border-bottom:1px solid #2D2D2D;
    border-radius: 2px;
}

.contact-button-submit:focus{
    background-color:#FAFAFA;
    color:#2d2d2d;
    border-left:1px solid #2D2D2D;
    border-right:1px solid #2D2D2D;
    border-top:1px solid #2D2D2D;
    border-bottom:1px solid #2D2D2D;
    border-radius: 2px;
    text-shadow:rgba(0,0,0,0) 0px 0px 0px;
}

.mega .pitch{
    box-sizing: border-box;
    color: rgba(255, 255, 255, 0.85);
    display: inline;
    /* font-family: 'Helvetica Neue', Helvetica, Arial, 'Lucida Grande', sans-serif; */
    font-size: 18px;
    font-weight: 300;
    height: auto;
    /*line-height: 24.2857151031494px;*/
    text-align: center;
    text-shadow: rgba(81, 81, 81, 0.05) 0px 1px 4px;
    width: auto;
    margin-top: 20px;
}

/*#channels li{opacity: 0;}*/

/*------------------- Channel page ---------------------------------------------------------------------------- */


.collapsible-header{
    font-weight: 400 !important;
    height: 64px !important;
    line-height: 64px !important;
    display: flex !important;
    align-items: center;
    justify-content: flex-end;
    flex-direction: row-reverse;
}

.collapsible-body{
    padding: 0rem;
}

.suggest_thumb {
    width:25%;
    float:left;
}

#empty-channel-message{
    font-size:22px;
    color:white;
    font-weight:300;
    position: relative;
    top:20px;
}

.side_away {
    -webkit-transition: all .3s !important;
    -moz-transition: all .3s !important;
    -o-transition: all .3s !important;
    transition: all .3s !important;
}

.video-container{
    -webkit-transition: opacity 0.5s;
    -moz-transition: opacity 0.5s;
    -o-transition: opacity 0.5s;
    transition: opacity 0.5s;
    overflow: visible;
}

.no-opacity{
    opacity:0;
}

.suggest_bar {
    /*margin-left:5px !important;*/
    color:rgb(68,68,68);
}

.suggest_buttons button{
    padding-left:10px !important;
    padding-right:10px !important;
    margin-right: 20px;
    width:90px;
}

.inner-suggest{
    padding-left:20px;
}

.suggest-songs:nth-child(odd) {background: rgba(204,204,204,0.40)}
.suggest-songs:nth-child(even) {background: #FFF}

.suggest-songs {
    padding-top:20px;
    border-bottom:1px solid black;
}

#thumbnail_form, #description_form {
    width: 100%;
    padding: 0 10px;
}

#chan_thumbnail, #chan_description{
    color: black;
    width: 100%;
}
/* ... */

